# math-intervals

./: CMakeLists.txt  LICENSE  README.md  intervals.cpp
